# config

./: .bashrc  .gitmessage.txt  .vimrc  CMakeLists.txt  Preferences.sublime-settings  clean_config.sh  git-default-config.sh  init.ps1  init.sh  install-default.sh  install-utilities.sh  vim-setup.sh
git/: .gitconfig  .gitmessage.txt  git-default-config.sh
julia/: .juliarc.jl  DefaultPkgs.ex.txt  DefaultPkgs3.txt  DefaultPkgs4.txt  DefaultPkgs5.txt  install_and_update_default_pkgs.jl
unix/: .bash_profile  .bashrc  .tmux.conf  fstab  install-default-manjaro.sh  install-default.sh  issue  ssh_config  sshd_config  sshd_config.simple  ubuntu-14.04_sources.list
utilities/: CMakeLists.txt  clean_unused_figs  countlines  end_with_newline.c  nlimits.cc
vim/: .vimrc
win/: Backup.bat  default.ahk
